@@ -20,9 +20,7 @@
  * Draw messages on signs like you'd expect.
  
  * Custom key bindings
- 
- * Ensure "standard" resolutions are available in selection dialog.
- 
+  
  * Figure out creating an EXE for Windows folks (looks like probably this
    would just require getting JSmooth installed in a VM somewhere, or
    whatever...)
